<resources>

    <!-- do not translate section -->

    <!-- Stripe Payment Gateway -->
    <string name="stripe_publish_key">pk_test_qXEJvHrGagl8H4qLOzAVgmw7</string>
    <string name="stripe_secret_test_key">sk_test_tBwzj4Pxw5QywD37NcjujkIn</string>
    <!-- end Stripe section -->

    <string name="paytm_merchant_id">fZmbSK51126174754857</string>

    <!--facebook credential-->
    <string name="facebook_app_id">351554552107666</string>
    <string name="fb_login_protocol_scheme">fb351554552107666</string>
    <string name="facebook_account_kit_client_token">2ffed271881757df317d7d52bb25beda</string>
    <string name="facebook_account_kit_secret">798ed43d8e8dd0ec1d7be274901453d8</string>

    <!-- ad mob credential -->
    <string name="app_ad_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id">ca-app-pub-5053116909686154/2891541437</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-5053116909686154/5614919459</string>

    <!-- terms and conditions, privacy policy and faq url -->
    <string name="terms_url">https://www.termsandconditionsgenerator.com/live.php?token=KV7zIg3DV9hXi1h0nExm6XQL3EAk0OSX</string>
    <string name="privacy_url">https://www.privacypolicygenerator.info/live.php?token=SSUtQWWAQlp6sVoFiTTJoDHObvNavoHi</string>
    <string name="faq_url">https://docs.google.com/document/d/e/2PACX-1vQZQg-db5an_DJy6WZMzPOfKCLJy1tu_QbvEKKJfs0K7tBiOdHzxegsM6b9N0i-Ip0hRwxDZrKD4HuK/pub</string>

    <string name="key_cash_on_delivery">cod</string>
    <string name="key_check">cheque</string>
    <string name="key_bank">bacs</string>
    <string name="key_gateway">payu</string>

    <!-- end of do not translate section -->

    <!--common string resources-->
    <string name="app_name">DHAKKAN</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="no_network_msg">No internet connectivity!</string>
    <string name="setting">Setting</string>
    <string name="login">LOG IN</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="search_hint_product">Type name, price</string>
    <string name="empty_list_msg">No data found!</string>

    <string name="msg_loading">Loading, please wait…</string>
    <string name="info">Info</string>
    <string name="next">Next</string>
    <string name="close">Close</string>

    <!--Drawer menu string resources-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_account">My Account</string>
    <string name="menu_products">All Product</string>
    <string name="menu_payment">Payment Setup</string>
    <string name="menu_my_address">Address</string>
    <string name="menu_cart">Cart List</string>
    <string name="menu_wish">Wish List</string>
    <string name="menu_order">Orders</string>
    <string name="menu_coupon">Coupons</string>
    <string name="menu_support">Support</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_setting">Settings</string>

    <!--Home page-->
    <string name="see_all">MORE</string>
    <!--Login page-->
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="skip">SKIP</string>

    <!--Product list heading-->
    <string name="list_featured">Featured items</string>
    <string name="list_recent">Recent items</string>

    <!--Product details-->
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="total_review">(Total review \u0020</string>

    <!--Order-->
    <string name="order_id">Order ID :\u0020</string>
    <string name="order_list">Order List</string>
    <string name="order_details">Order details</string>
    <string name="total_price">Total price :\u0020</string>
    <string name="status">Status :\u0020</string>

    <!--Coupon-->
    <string name="coupon_code">Coupon Code :\u0020</string>
    <string name="coupon_list">Coupon List</string>
    <string name="coupon_details">Coupon details</string>
    <string name="amount">Amount :\u0020</string>
    <string name="expire_date">Expire Date :\u0020</string>

    <!--Payment setup -checkout/delivery-->

    <string name="delivery">Delivery</string>
    <string name="payment">Payment</string>
    <string name="billing_address">Billing Address</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email*</string>
    <string name="user_name">User name*</string>
    <string name="address">Address*</string>
    <string name="city">City*</string>
    <string name="state">State*</string>
    <string name="zip_postal">Zip/Postal*</string>
    <string name="country">Country</string>
    <string name="telephone">Mobile/Telephone*</string>
    <string name="password_delivery">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ship_to_address">Ship to this address</string>

    <string name="shipping_address">Shipping Address</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="office_delivery">Pickup from warehouse</string>
    <string name="proceed">Proceed</string>

    <string name="select_payment_method">Select Payment Method</string>
    <string name="cash_payment">Cash on Delivery</string>
    <string name="card_payment">Credit card</string>
    <string name="password_reg">Password* (min 6 character)</string>
    <string name="place_order">Place Order</string>

    <!--Cart List-->
    <string name="buy">Buy</string>
    <string name="cart_list">Cart List</string>
    <string name="price_cart">Price :\u0020</string>
    <string name="quantity">Quantity :\u0020</string>

    <!--Confirmation Dialog-->
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_yes">YES</string>
    <string name="dialog_btn_no">NO</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="delete_wish_item">Do you want to delete this item from wish list?</string>
    <string name="delete_cart_item">Do you want to delete this item from cart list?</string>
    <string name="cancel_order_item">Do you want to cancel this order?</string>

    <!--search / advance search-->
    <string name="search_anything">Search anything</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="orders">Orders</string>
    <string name="size_attribute">Size/Attribute</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="to">to</string>
    <string name="order_by">Order by</string>
    <string name="select_order">Select order</string>

    <!-- Settings activity -->
    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_summary">Turn on/off notification</string>

    <!--Notification-->
    <string name="notifications">Notifications</string>
    <string name="notification_details">Notification details</string>
    <string name="placeholder">..</string>

    <string name="empty_result">No data!</string>

    <string name="tech_discovery">Special Gifts</string>
    <string name="featured_items">Featured Items</string>
    <string name="recent_items">Recent Items</string>
    <string name="popular_items">Popular Items</string>

    <!-- Support link url -->
    <string name="support">Support</string>
    <string name="support_link">http://mcc.com.bd/</string>

    <string name="select_attribute">Please select product attribute.</string>


    <!-- woo commerce payment methods -->

    <string name="title_bank">Direct bank transfer</string>

    <string name="title_check">Check payments</string>

    <string name="title_cash_on_delivery">Cash on delivery (Not Applicable)</string>

    <string name="title_payment">Debit or Credit Card / Net banking</string>

    <string name="transaction_id">Transaction ID</string>
    <string name="order_successful_message">Your order has been successfully placed and is being verified. Thank you for purchasing from us.</string>
    <string name="order_contact_message">If needed contact with us here: +91 7303737950</string>
    <string name="order_successful">Order successful</string>
    <string name="order_failed">Order failed!</string>
    <string name="finalize_order">Finalize order</string>

    <string name="failed">Failed</string>
    <string name="no_internet">No internet!</string>
    <string name="connect">Connect</string>
    <string name="share_text">Install best shopping application from:</string>
    <string name="already_in_cart">Product already in cart list.</string>
    <string name="added_to_cart">Added to cart</string>

    <string name="type_something">Type something to search</string>
    <string name="no_notification">No notification</string>

    <string name="rate">Rate App</string>
    <string name="share">Share</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="messenger">Messenger</string>
    <string name="others">Others</string>
    <string name="email_support">Email</string>
    <string name="whatsapp_support">Whatsapp</string>

    <string name="install_messenger">Install facebook messenger</string>
    <string name="permission_not_granted">Permission not granted!</string>

    <string name="change_representation">Change Representation</string>

    <string name="all">All</string>
    <string name="select_category">Select Category</string>
    <string name="please_sign_in">PLEASE SIGN IN WITH</string>
    <string name="facebook_cap">FACEBOOK</string>
    <string name="sign_out">Sign Out</string>
    <string name="google_cap">GOOGLE</string>
    <string name="email_cap">EMAIL</string>
    <string name="or">OR</string>
    <string name="register_to_show_order">Sign in to see your order list</string>
    <string name="select_all">Select All</string>
    <string name="empty_cart">Your cart is empty</string>
    <string name="empty_wish_list">Your wish list is empty</string>
    <string name="empty">Empty</string>

    <string name="total_orders">Total Orders</string>
    <string name="reviews">Reviews</string>
    <string name="no_comment">No comment</string>
    <string name="comments">Comments</string>

    <string name="terms">Terms and Conditions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="faq">FAQ</string>
    <string name="select_state">Select State</string>
    <string name="apply_coupon">APPLY COUPON</string>


</resources>
