<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#34364A">

    <ImageView
        android:id="@+id/gif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/height_width_100dp"/>

    <!--<ImageView-->
        <!--android:id="@+id/ivLogo"-->
        <!--android:layout_width="130dp"-->
        <!--android:layout_height="130dp"-->
        <!--android:layout_marginStart="22dp"-->
        <!--android:layout_marginTop="40dp"-->
        <!--android:src="@drawable/login_logo" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <com.shopby.dhakkan.view.MontserratTextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="WELCOME BACK!"
            android:textColor="@color/title_color_welcome"
            android:textSize="@dimen/txt_size_25sp"
            android:textStyle="bold" />

        <com.shopby.dhakkan.view.MontserratTextView
            android:id="@+id/loginMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_margin_30dp"
            android:text="@string/please_sign_in"
            android:textSize="@dimen/txt_size_14sp"
            android:textColor="#fff"/>

        <LinearLayout
            android:id="@+id/loginPanel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/pad_margin_20dp"
            android:layout_marginBottom="@dimen/pad_margin_20dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btnLoginFacebook"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_weight=".5"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                app:com_facebook_login_text="@string/facebook_cap"
                app:com_facebook_logout_text="@string/sign_out" />


            <com.google.android.gms.common.SignInButton
                android:id="@+id/btnLoginGPlus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight=".5"
                android:background="?attr/selectableItemBackground"
                app:buttonSize="wide" />

        </LinearLayout>

        <!--<com.shopby.web.view.RobotoTextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="@dimen/pad_margin_20dp"-->
            <!--android:textSize="16sp"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/or" />-->

        <!--<Button-->
            <!--android:id="@+id/btnLoginFbEmail"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="42dp"-->
            <!--android:layout_marginBottom="@dimen/pad_margin_20dp"-->
            <!--android:layout_marginTop="@dimen/pad_margin_20dp"-->
            <!--android:background="@drawable/shape_button_email"-->
            <!--android:text="@string/email_cap"-->
            <!--android:textColor="@color/white" />-->

        <com.shopby.dhakkan.view.RobotoTextView
            android:id="@+id/tvSkipLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_margin_10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/skip"
            android:visibility="gone"
            android:textColor="#fff"/>

    </LinearLayout>

</RelativeLayout>