<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lytContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lytProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="1">

        <com.shopby.dhakkan.view.MontserratTextView
            android:id="@+id/tvProductName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.65"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:textColor="@color/product_name_color"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="0.35"
            android:background="@drawable/btn_main"
            android:text="@string/add_to_cart"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytProductPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lytProductName"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:weightSum="10">

        <com.shopby.dhakkan.view.MontserratTextView
            android:id="@+id/tvSalesPrice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:textColor="@color/btnMain"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.shopby.dhakkan.view.MontserratTextView
            android:id="@+id/priceSeparator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:text="/"
            android:textColor="@color/product_name_color"
            android:textSize="26sp" />

        <com.shopby.dhakkan.view.MontserratTextView
            android:id="@+id/tvRegularPrice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.2"
            android:gravity="bottom"
            android:paddingBottom="6dp"
            android:textColor="@color/product_name_color"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/lytCounter"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="3.5"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/btn_inc_dec">

            <ImageButton
                android:id="@+id/btnQuantityMinus"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="2dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_decrement" />

            <TextView
                android:id="@+id/tvProductQuantity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnQuantityPlus"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:adjustViewBounds="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:maxWidth="20dp"
                android:padding="2dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_increment" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/lytProductPrice"
        android:layout_marginTop="@dimen/pad_margin_10dp"
        android:background="@color/detailsBoarder" />

    <TextView
        android:id="@+id/tvShortDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/pad_margin_10dp"
        android:textSize="14sp" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/tvShortDescription"
        android:layout_marginTop="@dimen/pad_margin_10dp"
        android:background="@color/detailsBoarder" />

    <WebView
        android:id="@+id/wvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="@dimen/pad_margin_10dp"
        android:background="@android:color/transparent"
        android:scrollbarSize="0dp"
        android:scrollbarStyle="insideOverlay" />

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/wvDescription"
        android:layout_marginTop="5dp"
        android:background="@color/detailsBoarder" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProductAttribute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line3"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:nestedScrollingEnabled="false"
        android:visibility="gone" />

    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/rvProductAttribute"
        android:layout_marginTop="@dimen/pad_margin_10dp"
        android:background="@color/detailsBoarder" />

    <LinearLayout
        android:id="@+id/sellAndReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line4"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <com.shopby.dhakkan.view.RobotoTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_orders"
                android:textColor="@color/product_name_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvOrderCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/total_orders"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/detailsBoarder" />

        <LinearLayout
            android:id="@+id/lytProductReview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingStart="10dp">

            <com.shopby.dhakkan.view.RobotoTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/reviews"
                android:textColor="@color/product_name_color"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8">

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:progressTint="#FF9800"
                        android:rating="4.2"
                        android:stepSize="0.1" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvAverageRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="end"
                    android:text="0"
                    android:textColor="@color/rating_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <TextView
                android:id="@+id/tvRatingCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:textSize="10sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/sellAndReview"
        android:background="@color/detailsBoarder" />

    <RelativeLayout
        android:id="@+id/lytProductComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line5"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/pad_margin_10dp">

        <com.shopby.dhakkan.view.RobotoTextView
            android:id="@+id/textComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:textColor="@color/product_name_color"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textComment"
            android:layout_marginTop="5dp"
            android:nestedScrollingEnabled="false" />

        <TextView
            android:id="@+id/emptyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textComment"
            android:layout_marginTop="10dp"
            android:text="@string/no_comment"
            android:textSize="12sp" />

    </RelativeLayout>

    <View
        android:id="@+id/line6"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/lytProductComment"
        android:layout_marginTop="@dimen/pad_margin_10dp"
        android:background="@color/detailsBoarder" />

    <LinearLayout
        android:id="@+id/footerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line6"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:gravity="end">

        <Button
            android:id="@+id/btnBuyNow"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_main"
            android:gravity="center"
            android:text="@string/buy_now"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
